добавил footer и вставил svg

--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Магазин цветов</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/normalize.css">
-</head>
-<body>
-    <div class="header">
-        <div class="container_menu">
-            <ul class="nav">
-                <li><a class="nav_link">Каталог</a></li>
-                <li><a class="nav_link">Доставка и оплата</a></li>
-                <li><a class="nav_link">Отзывы</a></li>
-                <li><a class="nav_link">"картинка"</a></li>
-                <li><a class="nav_link">Спецпредложения</a></li>
-                <li><a class="nav_link">Контакты</a></li>
-                <li><a class="nav_link">Корзина</a></li>
-            </ul>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container container_fluid container_separation">
+        <ul class="nav">
+          <li><a class="nav__link">Каталог</a></li>
+          <li><a class="nav__link">Доставка и оплата</a></li>
+          <li><a class="nav__link">Отзывы</a></li>
+          <li>
+            <a class="nav__link">
+              <img src="svg/logo.svg" alt="ООО Ботаника" />
+            </a>
+          </li>
+          <li><a class="nav__link">Спецпредложения</a></li>
+          <li><a class="nav__link">Контакты</a></li>
+          <li><a class="nav__link">Корзина</a></li>
+        </ul>
+      </div>
+    </header>
+
+    <main class="content">
+      <div class="container">
+        <div class="section">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
+          assumenda autem consectetur magni odit sit voluptate? A blanditiis
+          dolor dolores error, fugiat laboriosam laudantium minus mollitia
+          numquam quasi tempore!
         </div>
-    </div>
+      </div>
+    </main>
 
-    <div class="content">
-
-    </div>
-
-    <div class="footer">
-
-    </div>
-</body>
+    <footer class="footer container container_bg_primary">
+      <div class="section">
+        <a>
+          <img src="svg/logo_white.svg" alt="ООО Ботаника" />
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
