--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,75 @@
   </head>
   <body>
     <header class="header">
-      <div class="container container_fluid container_separation">
-        <ul class="nav">
-          <li><a class="nav__link">Каталог</a></li>
-          <li><a class="nav__link">Доставка и оплата</a></li>
-          <li><a class="nav__link">Отзывы</a></li>
-          <li>
-            <a class="nav__link">
-              <img src="svg/logo.svg" alt="ООО Ботаника" />
-            </a>
-          </li>
-          <li><a class="nav__link">Спецпредложения</a></li>
-          <li><a class="nav__link">Контакты</a></li>
-          <li><a class="nav__link">Корзина</a></li>
-        </ul>
+      <div class="container container_fluid container_line">
+        <div class="section">
+          <ul class="nav">
+            <li><a href="#" class="nav__link">Каталог</a></li>
+            <li><a href="#" class="nav__link">Доставка и оплата</a></li>
+            <li><a href="#" class="nav__link">Отзывы</a></li>
+            <li>
+              <a href="#">
+                <svg class="nav__logo">
+                  <use xlink:href="svg/sprite.svg#logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li><a href="#" class="nav__link">Спецпредложения</a></li>
+            <li><a href="#" class="nav__link">Контакты</a></li>
+            <li><a href="#" class="nav__link">Корзина</a></li>
+          </ul>
+        </div>
       </div>
     </header>
 
     <main class="content">
       <div class="container">
         <div class="section">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
-          assumenda autem consectetur magni odit sit voluptate? A blanditiis
-          dolor dolores error, fugiat laboriosam laudantium minus mollitia
-          numquam quasi tempore!
+          <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
+            amet assumenda autem consectetur magni odit sit voluptate? A
+            blanditiis dolor dolores error, fugiat laboriosam laudantium minus
+            mollitia numquam quasi tempore!
+          </div>
         </div>
       </div>
     </main>
 
     <footer class="footer container container_bg_primary">
       <div class="section">
-        <a>
-          <img src="svg/logo_white.svg" alt="ООО Ботаника" />
-        </a>
+        <ul class="nav nav_alternative">
+          <li class="nav__logo">
+            <a hreflang="#">
+              <svg>
+                <use xlink:href="svg/sprite.svg#logo-white"></use>
+              </svg>
+            </a>
+          </li>
+          <li><a href="#" class="nav__link">Каталог</a></li>
+          <li><a href="#" class="nav__link">Доставка и оплата</a></li>
+          <li><a href="#" class="nav__link">Отзывы</a></li>
+          <li><a href="#" class="nav__link">Спецпредложения</a></li>
+          <li><a href="#" class="nav__link">Контакты</a></li>
+          <li>
+            <div class="social">
+              <a class="social__link">
+                <svg class="social__icon">
+                  <use xlink:href="svg/sprite.svg#insta"></use>
+                </svg>
+              </a>
+              <a class="social__link">
+                <svg class="social__icon">
+                  <use xlink:href="svg/sprite.svg#fb"></use>
+                </svg>
+              </a>
+              <a class="social__link">
+                <svg class="social__icon">
+                  <use xlink:href="svg/sprite.svg#tw"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
