experemental top block + grid

--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,19 @@
     <main class="content">
       <div class="container">
         <div class="section">
-          <div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
-            amet assumenda autem consectetur magni odit sit voluptate? A
-            blanditiis dolor dolores error, fugiat laboriosam laudantium minus
-            mollitia numquam quasi tempore!
+          <div class="grid">
+            <div class="box_1">
+              <div>
+                <h1 class="text_top">Авторские букеты <br><span>в Петербурге</span></h1>
+                <div class="subtext_top">Оригинальные свежие букеты с доставкой по всему городу</div>
+              </div>
+            </div>
+            <div class="box_2">
+              <img alt="Фото 1" src="img/1.jpg" />
+            </div>
+            <div class="box_3">
+              <img alt="Фото 2" src="img/2.jpg" />
+            </div>
           </div>
         </div>
       </div>
