--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Магазин цветов</title>
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="@webRoot/css/libs.min.css" />
+    <link rel="stylesheet" href="@webRoot/css/style.css" />
+    <script src="@webRoot/js/script.js"></script>
   </head>
   <body>
-    <header class="header">
-      <div class="container container_fluid container_line">
+    <header class="header header_line">
         <div class="section">
           <ul class="nav">
             <li><a href="#" class="nav__link">Каталог</a></li>
@@ -26,7 +26,6 @@
             <li><a href="#" class="nav__link">Корзина</a></li>
           </ul>
         </div>
-      </div>
     </header>
     <main class="content">
       <div class="container">
@@ -35,19 +34,19 @@
             <div class="col">
               <div>
                 <h1 class="header__text">
-                  Авторские букеты <i>в Петербурге</i></h1>
+                  Авторские букеты <br><i>в Петербурге</i></h1>
                   <div class="subtext_top">
                     Оригинальные свежие букеты с доставкой по всему городу
                   </div>
               </div>
             </div>
             <div class="col">
-              <div class="header__img header__img_bottom">
+              <div>
                 <img alt="Фото 1" src="../images/1.jpg" />
               </div>
             </div>
             <div class="col">
-              <div class="header__img">
+              <div>
                 <img alt="Фото 2" src="../images/2.jpg" />
               </div>
             </div>
@@ -56,7 +55,7 @@
       </div>
     </main>
 
-    <footer class="footer container container_bg_primary">
+    <footer class="footer footer_bg">
       <div class="section">
         <ul class="nav nav_alternative">
           <li>
@@ -71,7 +70,7 @@
           <li><a href="#" class="nav__link">Отзывы</a></li>
           <li><a href="#" class="nav__link">Спецпредложения</a></li>
           <li><a href="#" class="nav__link">Контакты</a></li>
-          <li>
+          <li> 1
             <div class="social">
               <a class="social__link">
                 <svg class="social__icon">
