Fix index, add svg img and section-first.scss

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,29 +28,31 @@
       </div>
     </header>
     <main class="content">
-      <div class="container">
-        <div class="section section_first">
-          <div class="row root__row-no-wrap">
-            <div class="col-4">
-              <h1 class="header__text">Авторские букеты <i>в Петербурге</i></h1>
-              <div class="subtext_top">
+      <div class="section section-first">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h1 class="section-first__text">
+                Авторские букеты <i>в Петербурге</i>
+              </h1>
+              <div class="subtitle section-first__subtitle">
                 Оригинальные свежие букеты с доставкой по всему городу
               </div>
-              <input type="button" class="button section_first__button" value="Смотреть каталог" />
+              <input type="button" class="button" value="Смотреть каталог" />
             </div>
-            <div class="col-auto">
-              <div class="section_first__wrap__wrap">
+            <div class="col-lg-4">
+              <div class="section-first__wrap section-first__wrap-margin-top">
                 <img
-                  class="section_first__img"
+                  class="section-first__picture"
                   alt="Фото 1"
                   src="@webRoot/images/1.jpg"
                 />
               </div>
             </div>
-            <div class="col-auto">
-              <div class="section_first__wrap__wrap">
+            <div class="col-lg-4">
+              <div class="section-first__wrap">
                 <img
-                  class="section_first__img__img"
+                  class="section-first__picture"
                   alt="Фото 2"
                   src="@webRoot/images/2.jpg"
                 />
