--- a/src/pages/uikit.html
+++ b/src/pages/uikit.html
@@ -174,15 +174,15 @@
           <div class="block__name">Кнопка</div>
 
           <div class="block__body">
-            <div class="block__item block__item_dark">
+            <div class="block__item">
               <div class="button">.button</div>
             </div>
 
-            <div class="block__item block__item_dark">
+            <div class="block__item">
               <a class="button" href="#">a.button</a>
             </div>
 
-            <div class="block__item block__item_dark">
+            <div class="block__item">
               <input
                 class="button"
                 type="button"
@@ -190,15 +190,10 @@
               />
             </div>
 
-            <div class="block__item block__item_dark">
+            <div class="block__item">
               <button class="button">button.button</button>
             </div>
 
-            <div class="block__item block__item_dark block__item_wide">
-              <div class="button button_full-width">
-                .button.button_full-width
-              </div>
-            </div>
           </div>
         </div>
         <!-- Ссылка -->
