Add social icon html and scss

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -66,29 +66,8 @@
           <li><a href="#" class="nav__link">Отзывы</a></li>
           <li><a href="#" class="nav__link">Спецпредложения</a></li>
           <li><a href="#" class="nav__link">Контакты</a></li>
-
           <li>
-            <div class="icon">
-              <div class="icon__wrap footer__icon">
-                <svg class="icon__img ">
-                  <use xlink:href="@webRoot/images/sprite.svg#fb"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="icon">
-              <div class="icon__wrap footer__icon">
-                <svg class="icon__img ">
-                  <use xlink:href="@webRoot/images/sprite.svg#fb"></use>
-                </svg>
-              </div>
-            </div>
-            <div class="icon">
-              <div class="icon__wrap footer__icon">
-                <svg class="icon__img ">
-                  <use xlink:href="@webRoot/images/sprite.svg#fb"></use>
-                </svg>
-              </div>
-            </div>
+            @include('../blocks/social/social.html')
           </li>
         </ul>
 
