--- a/src/pages/uikit.html
+++ b/src/pages/uikit.html
@@ -153,6 +153,16 @@
             </div>
           </div>
         </div>
+        <!-- Иконки социальных сетей -->
+        <div class="block root__block">
+          <div class="block__name">Блок иконок социальных сетей</div>
+
+          <div class="block__body">
+            <div class="block__item block__item_dark">
+                @include('../blocks/social/social.html')
+            </div>
+          </div>
+        </div>
         <!-- Логотип -->
         <div class="block root__block">
           <div class="block__name">Логотип</div>
@@ -162,7 +172,8 @@
               <div class="row">
                 <div class="col-1">
                   <a href="/">
-                    @include('../blocks/icon/icon.html', { name: 'logo', classes: 'logo' })
+                    @include('../blocks/icon/icon.html', { name: 'logo',
+                    classes: 'logo' })
                   </a>
                 </div>
               </div>
@@ -193,7 +204,6 @@
             <div class="block__item">
               <button class="button">button.button</button>
             </div>
-
           </div>
         </div>
         <!-- Ссылка -->
