Deleted more styles and added bold in subtitle.scss

--- a/src/pages/uikit.html
+++ b/src/pages/uikit.html
@@ -244,26 +244,12 @@
             </div>
 
             <div class="block__item block__item_wide">
-              <div class="subtitle subtitle_size_xs">
-                .subtitle.subtitle_size_xs
-              </div>
-            </div>
-
-            <div class="block__item block__item_wide">
-              <div class="subtitle subtitle_size_sm">
-                .subtitle.subtitle_size_sm
-              </div>
+              <div class="subtitle subtitle_bold">.subtitle.subtitle_bold</div>
             </div>
 
             <div class="block__item block__item_wide">
               <div class="subtitle subtitle_size_lg">
                 .subtitle.subtitle_size_lg
-              </div>
-            </div>
-
-            <div class="block__item block__item_wide">
-              <div class="subtitle subtitle_size_xl">
-                .subtitle.subtitle_size_xl
               </div>
             </div>
           </div>
