--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,8 +16,8 @@
     <main class="content">
       <div class="section section-first">
         <div class="container">
-          <div class="row">
-            <div class="col">
+          <div class="row section-first__row-padding-bottom">
+            <div class="col-4">
               <h1 class="section-first__text">
                 Авторские букеты <i>в Петербурге</i>
               </h1>
@@ -26,7 +26,7 @@
               </div>
               <input type="button" class="button" value="Смотреть каталог" />
             </div>
-            <div class="col-lg-4">
+            <div class="col-4">
               <div class="section-first__wrap section-first__wrap-margin-top">
                 <img
                   class="section-first__picture"
@@ -35,7 +35,7 @@
                 />
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-4">
               <div class="section-first__wrap">
                 <img
                   class="section-first__picture"
