Microfix subtitle section-first.scss

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,7 +21,7 @@
               <h1 class="section-first__text">
                 Авторские букеты <i>в Петербурге</i>
               </h1>
-              <div class="subtitle section-first__subtitle">
+              <div class="subtitle subtitle_size_lg section-first__subtitle">
                 Оригинальные свежие букеты с доставкой по всему городу
               </div>
               <input type="button" class="button" value="Смотреть каталог" />
