--- a/src/pages/uikit.html
+++ b/src/pages/uikit.html
@@ -299,7 +299,9 @@
                 text: 'Элегантный букет, который станет отличным подарком на день рождения или юбилей.',
                 other: '30 × 40 см',
                 price: '3600 руб.',
-                buypage: '#'
+                img: {
+                  url: '@webRoot/images/popular/nezhnost.png'
+                },
               })
             </div>
           </div>
