--- a/src/blocks/popular/popular.html
+++ b/src/blocks/popular/popular.html
@@ -6,17 +6,11 @@
         <div class="popular__text">@text</div>
         <div class="popular__text-other">@other</div>
         <div class="popular__price">@price</div>
-        <a class="button popular__button" href="@buypage" >Заказать</a>
+        <a class="button popular__button" >Заказать</a>
       </div>
     </div>
     <div class="col-4">
-      <div class="popular__wrap">
-        <img
-          class="popular__picture"
-          alt="Букет «Нежность»"
-          src="@webRoot/images/popular/nezhnost.png"
-        />
-      </div>
+        <div class="popular__img" style="background-image: url('@img.url')" role="img" aria-label="@title"></div>
     </div>
   </div>
 </div>
