--- a/src/pages/uikit.html
+++ b/src/pages/uikit.html
@@ -170,10 +170,16 @@
           <div class="block__body">
             <div class="block__item block__item_wide">
               <div class="row">
-                <div class="col-1">
+                <div class="col-6">
                   <a href="/">
                     @include('../blocks/icon/icon.html', { name: 'logo',
                     classes: 'logo' })
+                  </a>
+                </div>
+                <div class="col-6 block__item_dark">
+                  <a href="/">
+                    @include('../blocks/icon/icon.html', { name: 'logo',
+                    classes: 'logo logo_white' })
                   </a>
                 </div>
               </div>
