--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -88,6 +88,36 @@
           })
         </div>
       </section>
+      <section class="section">
+        <div class="container">
+          <div class="row">
+            <div class="col-4">
+              <!-- prettier-ignore -->
+              @include('../blocks/catalog/catalog.html', {
+                url: '@webRoot/images/catalog/1.png',
+                title: 'Свадебные букеты',
+                subtitle: 'Букеты для невест'
+              })
+            </div>
+            <div class="col-4">
+              <!-- prettier-ignore -->
+              @include('../blocks/catalog/catalog.html', {
+                url: '@webRoot/images/catalog/2.png',
+                title: 'Букеты с пионами',
+                subtitle: 'Букеты с сезонными пионами'
+              })
+            </div>
+            <div class="col-4">
+              <!-- prettier-ignore -->
+              @include('../blocks/catalog/catalog.html', {
+                url: '@webRoot/images/catalog/3.png',
+                title: 'Выбрать букет',
+                subtitle: 'Букеты в ассортименте'
+              })
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer footer_bg">
@@ -95,8 +125,8 @@
         <ul class="nav nav_alternative">
           <li>
             <a class="nav__logo" href="#">
-              @include('../blocks/icon/icon.html', { name: 'logo',
-              classes: 'logo logo_white' })
+              @include('../blocks/icon/icon.html', { name: 'logo', classes:
+              'logo logo_white' })
             </a>
           </li>
           <li><a href="#" class="nav__link">Каталог</a></li>
