Add discount block

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -118,6 +118,28 @@
           </div>
         </div>
       </section>
+
+      <section class="section">
+        <div class="container">
+          <div class="discount">
+            <div class="discount__info">
+              <div class="row discount__row-center">
+                <div class="col-8">
+                  <div class="title title_size_lg discount__title">
+                    Скидка 10% <br />
+                    на первый заказ
+                  </div>
+                  <div class="subtitle subtitle_size_lg">
+                    Если заказываете у нас букет впервые — при оформлении заказа введите
+                    промокод «Botanika2021» и получите скидку 10%.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <img src="@webRoot/images/discount/1.png" />
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer footer_bg">
